log
Fri 14 Apr 2023 10:18:45 PM UTC: 
 tests:  0|6
total_score: 0/70
2652da8
Fri 14 Apr 2023 11:15:44 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:10: error: unused variable ‘map’ [-Werror=unused-variable]
   55 | HashMap* map = (HashMap*) malloc(sizeof(HashMap));
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
62a49e0
Fri 14 Apr 2023 11:18:35 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:15: error: ‘size’ undeclared (first use in this function)
   56 |   map->size = size;
      |               ^~~~
hashmap.c:56:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:59:56: error: expected ‘)’ before ‘;’ token
   59 |   map->buckets = (Pair**) calloc(capacity*sizeof(Pair*);
      |                                 ~                      ^
      |                                                        )
hashmap.c:59:27: error: too few arguments to function ‘calloc’
   59 |   map->buckets = (Pair**) calloc(capacity*sizeof(Pair*);
      |                           ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:4:
hashmap.c:61:17: error: expected ‘;’ before ‘}’ token
   61 |     return NULL;
      |                 ^
      |                 ;
   62 | }
      | ~                
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a245c2e
Fri 14 Apr 2023 11:20:24 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:15: error: ‘size’ undeclared (first use in this function)
   56 |   map->size = size;
      |               ^~~~
hashmap.c:56:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:62: error: expected ‘)’ before ‘;’ token
   60 |   map->buckets = (HashMap**) malloc(capacity*sizeof(HashMap*);
      |                                    ~                         ^
      |                                                              )
hashmap.c:60:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   60 |   map->buckets = (HashMap**) malloc(capacity*sizeof(HashMap*);
      |                ^
hashmap.c:62:17: error: expected ‘;’ before ‘}’ token
   62 |     return NULL;
      |                 ^
      |                 ;
   63 | }
      | ~                
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c122b88
Fri 14 Apr 2023 11:20:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:62: error: expected ‘)’ before ‘;’ token
   60 |   map->buckets = (HashMap**) malloc(capacity*sizeof(HashMap*);
      |                                    ~                         ^
      |                                                              )
hashmap.c:60:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   60 |   map->buckets = (HashMap**) malloc(capacity*sizeof(HashMap*);
      |                ^
hashmap.c:62:17: error: expected ‘;’ before ‘}’ token
   62 |     return NULL;
      |                 ^
      |                 ;
   63 | }
      | ~                
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
db5105f
